# gateio-crypto-trading-bot-binance-announcements-new-coins

./: .gitignore  .pre-commit-config.yaml  426247aq3y4  Dockerfile  README.md  config.example.yml  dev_requirements.txt  development_setup.md  docker-compose.yml  globals.py  load_config.py  logger.py  main.py  new_listings_scraper.py  newly_listed.example.json  newly_listed.json  old_coins.example.json  pyproject.toml  requirements.txt  requirements_additional_build_agent.txt  send_discord.py  send_sms.py  send_telegram.py  settings.py  setup.cfg  setup.py  store_order.py  telegram_client.py  tox.ini  trade_client.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  tests.yml
auth/: auth.example.yml  auth_twilio.example.yml  gateio_auth.py  twilio_auth.py
auth/tests/: test_new_listings_scraper.py
config/: config.example.yml
config/auth/: auth.example.yml
src/: config.example.yml  globals.py  logger.py  main.py  new_listings_scraper.py  rotating_proxy.py  send_telegram.py  trade_client.py
src/announcement_scrapers/: binance_scraper.py  kucoin_scraper.py
src/auth/: auth.example.yml  gateio_auth.py
src/gateio_new_coins_announcements_bot/: globals.py  logger.py  main.py  new_listings_scraper.py  rotating_proxy.py  send_telegram.py  store_order.py  trade_client.py
src/gateio_new_coins_announcements_bot/auth/: gateio_auth.py
src/util/: random.py
tests/: test_example.py  test_new_listings_scraper.py
tests/announcement_scrapers/: test_binance_scraper.py  test_kucoin_scraper.py
tests/util/: test_random.py
(+6 files in other folders)
