[metadata]
name = gateio_new_coins_announcements_bot
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
license = 'MIT'

[options]
install_requires =
    requests>=2.25
    gate_api>=4.22
    PyYAML>=6.0

packages =
    gateio_new_coins_announcements_bot
    gateio_new_coins_announcements_bot.auth
python_requires = >=3.7
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24
    ; mypy>=0.910

; [options.package_data]
; gateio_new_coins_announcements_bot = py.typed

[flake8]
max-line-length = 120
; W503: https://stackoverflow.com/questions/57074300/what-is-the-recommended-way-to-break-long-if-statement-w504-line-break-after-b
extend-ignore = W503
exclude =
    .git,
    __pycache__,
